# aisaac-strategy

./: .gitignore  .travis.yml  Dockerfile  requirements.txt  runtest.sh
aisaac/: CMakeLists.txt  package.xml
aisaac/launch/: aisaac.launch  aisaac_autotune.launch  aisaac_blue.launch  aisaac_yellow.launch  strategy.launch
aisaac/msg/: Ball_sub_params.msg  Def_pos.msg  Shutdown.msg  Status.msg
aisaac/scripts/: .robot.py.swp  .robot_functions.py.swp  .world_model.py.swp  .world_model_functions.py.swp  calculation.py  config.py  context.py  decision_maker.py  decision_making.py  direct_free_attack_strategy_calcurator.py  direct_free_blue_strategy_calcurator.py  direct_free_defence_strategy_calcurator.py  direct_free_yellow_strategy_calcurator.py  dribble.py  enemy_ball_placement_strategy_calculator.py  entity.py  filter.py  friend_ball_placement_strategy_calcurator.py  functions.py  indirect_free_attack_strategy_calcurator.py  indirect_free_blue_strategy_calcurator.py  indirect_free_defence_strategy_calcurator.py  indirect_free_yellow_strategy_calcurator.py  kickoff_strategy_calcurator.py  normal_start_strategy_calcurator.py  objects.py  penalty_attack_strategy_calcurator.py  pid_autotune.py  referee.py  robot.py  robot_command_publisher_wrapper.py  robot_defence.py  robot_functions.py  robot_keeper.py  robot_kick.py  robot_pid.py  robot_status.py  robot_strategy.py  robot_utils.py  stop_strategy_calcurator.py  (+15 more)
aisaac/src/: command_sender.cpp  command_senders.cpp  command_senders_blue.cpp  command_senders_yellow.cpp  sender_blue_JO2023.cpp  sender_xbee_blue.cpp  (+1 more)
(+97 files in other folders)
